# lesson-loom

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lesson_loom/: __init__.py  cli.py
src/lesson_loom/app/: main.py
src/lesson_loom/context_packs/: loader.py
src/lesson_loom/context_packs/fixtures/: history_industrial_revolution.yaml  science_photosynthesis.yaml
src/lesson_loom/core/: config.py  hashing.py  logging.py  northstar.py  schemas.py
src/lesson_loom/evals/: cache.py  harness.py
src/lesson_loom/evals/datasets/: history.yaml  science.yaml
src/lesson_loom/evals/scorers/: __init__.py  format_validity.py  grounding.py  hallucination.py  llm_judge.py  objective_coverage.py  readability.py  synthesized.py
src/lesson_loom/generation/: graph.py  nodes.py  prompts.py
src/lesson_loom/optimizer/: failure_analyzer.py  loop.py  promotion.py  proposal.py  report.py  store.py  tools.py
src/lesson_loom/providers/: __init__.py  base.py  claude.py  mock.py
tests/: conftest.py  test_api.py  test_cli.py  test_determinism.py  test_optimizer_loop.py  test_promotion_gate.py  test_schemas.py  test_scorers.py
